Fix GitHub login, implement Signup, and update AuthContext/Security